fix nav overlay positioning on tablet

--- a/src/ui/navigation/navigation.module.scss
+++ b/src/ui/navigation/navigation.module.scss
@@ -102,6 +102,11 @@
         border-radius: 0.5rem;
         justify-content: center;
 
+        @include tablet{
+            width: calc(100vw - 4rem);
+            right: 0;
+        }
+
         @include desktop{
             position: static;
             display: flex;
